chore: initial commit

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link href="./style/global.css" rel="stylesheet" />
+    <link href="../dist/output.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h1 class="text-red-800 text-5xl">hello world</h1>
+  </body>
 </html>
