feat: add navbar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title></title>
@@ -13,6 +13,61 @@
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-red-800 text-5xl">hello world</h1>
+    <header class="container p-7 mx-auto">
+      <div class="absolute inset-0 -z-10">
+        <svg
+          class="w-full lg:scale-150 xl:scale-100 scale-[3] sm:scale-[2]"
+          viewBox="0 0 1441 695"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M1619.5 -205C1619.5 292.056 1216.56 695 719.5 695C222.444 695 -180.5 292.056 -180.5 -205C-180.5 -702.056 222.444 -1105 719.5 -1105C1216.56 -1105 1619.5 -702.056 1619.5 -205Z"
+            fill="url(#paint0_linear_15_19)"
+          />
+          <defs>
+            <linearGradient
+              id="paint0_linear_15_19"
+              x1="665.5"
+              y1="665.907"
+              x2="665.5"
+              y2="-450.593"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="#6788FF" stop-opacity="0.16" />
+              <stop
+                offset="0.648958"
+                stop-color="#8894FF"
+                stop-opacity="0.02"
+              />
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
+
+      <div class="flex justify-center mt-[120px]">
+        <img src="./public/Logo.svg" alt="logo" />
+      </div>
+
+      <div class="mt-5 text-center">
+        <h1 class="text-2xl font-semibold text-black lg:text-4xl">
+          We Rise. We Change
+        </h1>
+        <p
+          class="hidden mt-12 text-2xl font-normal text-black sm:inline-block lg:w-9/12"
+        >
+          MCC atau Muria Computer Club merupakan UKM di Universitas Muria Kudus.
+          UKM yang berbasis keilmuan dan memiliki visi menjadi "Study for
+          Prosperity"
+        </p>
+        <div>
+          <a
+            href="#"
+            class="inline-block py-2 px-6 mt-9 text-base font-medium text-white rounded-[11px] bg-slate-700 hover:bg-slate-500"
+            >More</a
+          >
+        </div>
+      </div>
+    </header>
   </body>
 </html>
