feat: add tentang kami

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <title></title>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Selamat datang di Muria Computer Club (MCC), UKM di Universitas Muria Kudus. Bergabunglah dengan komunitas teknologi kami dan ciptakan masa depan cerah bersama MCC!"
+    />
+    <meta name="keywords" content="MCC, Muria Computer Club, UKM, Universitas
+    Muria Kudus, teknologi informasi, komputer, pemrograman, workshop, kelas,
+    kompetisi IT, Study for Prosperity"" />
+    <!-- <meta name="author" content="" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body>
@@ -69,5 +78,59 @@
         </div>
       </div>
     </header>
+
+    <section class="container relative mx-auto mt-32 md:mt-64 lg:mt-96">
+      <div class="absolute inset-0 w-full h-full -z-10">
+        <svg
+          class="w-full"
+          viewBox="0 0 390 294"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M109.06 22.4507C66.9996 -0.676534 18.8282 -1.5215 0 0.946926V293.312H390V0.946926C370.902 -0.524635 323.162 1.71593 284.984 22.4507C237.262 48.3691 161.635 51.3597 109.06 22.4507Z"
+            fill="url(#paint0_linear_287_44)"
+            fill-opacity="0.17"
+          />
+          <defs>
+            <linearGradient
+              id="paint0_linear_287_44"
+              x1="195"
+              y1="0"
+              x2="195"
+              y2="293.312"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="#6788FF" />
+              <stop offset="1" stop-color="#8894FF" stop-opacity="0" />
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
+
+      <div
+        class="flex absolute inset-0 flex-col justify-center items-center mt-24 sm:mt-32 md:mt-36 lg:mt-44 xl:mt-56 h-max"
+      >
+        <p
+          class="text-xl font-semibold text-center text-emerald-400 lg:text-2xl"
+        >
+          Tentang Kami
+        </p>
+        <h1
+          class="mt-2 text-2xl font-semibold text-center text-black lg:text-4xl"
+        >
+          Muria Computer Club
+        </h1>
+        <p
+          class="mt-7 w-11/12 text-base font-normal text-center text-black lg:w-9/12 lg:text-2xl xl:w-8/12"
+        >
+          MCC adalah komunitas mahasiswa Universitas Muria Kudus berbasis IT
+          yang didirikan pada tahun 2022. MCC fokus pada pengembangan karya di
+          bidang rekayasa perangkat lunak dan perangkat keras, dengan kerjasama
+          individu maupun tim. Komunitas ini memberikan dampak positif dan
+          pengalaman berharga bagi para peminatnya.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
