--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./public/Logo.svg" type="image/x-icon" />
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body>
