fix: overflow background header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="container p-7 mx-auto">
-      <div class="absolute inset-0 -z-10">
+      <div class="overflow-hidden absolute inset-0 -z-10">
         <svg
           class="w-full lg:scale-150 xl:scale-100 scale-[3] sm:scale-[2]"
           viewBox="0 0 1441 695"
