fix bg-img header&section

--- a/index.html
+++ b/index.html
@@ -22,107 +22,55 @@
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="container p-7 mx-auto">
-      <div class="overflow-hidden absolute inset-0 -z-10">
-        <svg
-          class="w-full lg:scale-150 xl:scale-100 scale-[3] sm:scale-[2]"
-          viewBox="0 0 1441 695"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M1619.5 -205C1619.5 292.056 1216.56 695 719.5 695C222.444 695 -180.5 292.056 -180.5 -205C-180.5 -702.056 222.444 -1105 719.5 -1105C1216.56 -1105 1619.5 -702.056 1619.5 -205Z"
-            fill="url(#paint0_linear_15_19)"
-          />
-          <defs>
-            <linearGradient
-              id="paint0_linear_15_19"
-              x1="665.5"
-              y1="665.907"
-              x2="665.5"
-              y2="-450.593"
-              gradientUnits="userSpaceOnUse"
-            >
-              <stop stop-color="#6788FF" stop-opacity="0.16" />
-              <stop
-                offset="0.648958"
-                stop-color="#8894FF"
-                stop-opacity="0.02"
-              />
-            </linearGradient>
-          </defs>
-        </svg>
-      </div>
+    <header
+      class="bg-center bg-no-repeat bg-cover xl:pt-9 2xl:pt-44 h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] xl:h-[650px] 2xl:h-[910px]"
+      style="background-image: url('./public/bg-header.png')"
+    >
+      <div class="container mx-auto">
+        <div class="flex justify-center mt-[130px]">
+          <img src="./public/Logo.svg" alt="logo" />
+        </div>
 
-      <div class="flex justify-center mt-[120px]">
-        <img src="./public/Logo.svg" alt="logo" />
-      </div>
-
-      <div class="mt-5 text-center">
-        <h1 class="text-2xl font-semibold text-black lg:text-4xl">
-          We Rise. We Change
-        </h1>
-        <p
-          class="hidden mt-12 text-2xl font-normal text-black sm:inline-block lg:w-9/12"
-        >
-          MCC atau Muria Computer Club merupakan UKM di Universitas Muria Kudus.
-          UKM yang berbasis keilmuan dan memiliki visi menjadi "Study for
-          Prosperity"
-        </p>
-        <div>
-          <a
-            href="#"
-            class="inline-block py-2 px-6 mt-9 text-base font-medium text-white rounded-[11px] bg-slate-700 hover:bg-slate-500"
-            >More</a
+        <div class="mt-5 text-center">
+          <h1 class="text-2xl font-semibold text-black lg:text-4xl">
+            We Rise. We Change
+          </h1>
+          <p
+            class="hidden mt-12 w-9/12 text-2xl font-normal text-black sm:inline-block lg:w-10/12 xl:w-7/12"
           >
+            MCC atau Muria Computer Club merupakan UKM di Universitas Muria
+            Kudus. UKM yang berbasis keilmuan dan memiliki visi menjadi
+          </p>
+          <p
+            class="hidden text-2xl font-normal text-black sm:inline-block lg:w-9/12"
+          >
+            "Study for Prosperity"
+          </p>
+
+          <div>
+            <a
+              href="#"
+              class="inline-block py-2 px-6 mt-9 text-base font-medium text-white rounded-[11px] bg-slate-700 hover:bg-slate-500"
+              >More</a
+            >
+          </div>
         </div>
       </div>
     </header>
 
-    <section class="container relative mx-auto mt-32 md:mt-64 lg:mt-96">
-      <div class="absolute inset-0 w-full h-full -z-10">
-        <svg
-          class="w-full"
-          viewBox="0 0 390 294"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M109.06 22.4507C66.9996 -0.676534 18.8282 -1.5215 0 0.946926V293.312H390V0.946926C370.902 -0.524635 323.162 1.71593 284.984 22.4507C237.262 48.3691 161.635 51.3597 109.06 22.4507Z"
-            fill="url(#paint0_linear_287_44)"
-            fill-opacity="0.17"
-          />
-          <defs>
-            <linearGradient
-              id="paint0_linear_287_44"
-              x1="195"
-              y1="0"
-              x2="195"
-              y2="293.312"
-              gradientUnits="userSpaceOnUse"
-            >
-              <stop stop-color="#6788FF" />
-              <stop offset="1" stop-color="#8894FF" stop-opacity="0" />
-            </linearGradient>
-          </defs>
-        </svg>
-      </div>
-
-      <div
-        class="flex absolute inset-0 flex-col justify-center items-center mt-24 sm:mt-32 md:mt-36 lg:mt-44 xl:mt-56 h-max"
-      >
-        <p
-          class="text-xl font-semibold text-center text-emerald-400 lg:text-2xl"
-        >
+    <section
+      class="bg-center bg-no-repeat bg-cover w-[200ox] full mt-[164px] h-[400px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
+      style="background-image: url('./public/bg-section.png')"
+    >
+      <div class="container flex flex-col mx-auto text-center pt-[77px]">
+        <p class="text-xl font-semibold text-emerald-400 lg:text-2xl">
           Tentang Kami
         </p>
-        <h1
-          class="mt-2 text-2xl font-semibold text-center text-black lg:text-4xl"
-        >
+        <h1 class="mt-2 text-2xl font-semibold text-black lg:text-4xl">
           Muria Computer Club
         </h1>
         <p
-          class="mt-7 w-11/12 text-base font-normal text-center text-black lg:w-9/12 lg:text-2xl xl:w-8/12"
+          class="mx-auto mt-7 w-11/12 text-base font-normal text-black lg:w-9/12 lg:text-2xl xl:w-8/12"
         >
           MCC adalah komunitas mahasiswa Universitas Muria Kudus berbasis IT
           yang didirikan pada tahun 2022. MCC fokus pada pengembangan karya di
