feat: add class

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
         <div
           class="flex justify-center items-center bg-violet-100 rounded-[11px]"
-          onmouseover="changeText('textHr', 'Divisi yang bertanggung jawab mengelola sumber daya manusia, termasuk perekrutan, pengembangan karyawan, administrasi kepegawaian, kebijakan karyawan, dan menciptakan lingkungan kerja yang produktif dan berdaya saing.', '14px', 'normal')"
+          onmouseover="changeText('textHr', 'Divisi bertanggung jawab mengelola sumber daya manusia, termasuk perekrutan, pengembangan karyawan, administrasi kepegawaian, kebijakan karyawan, dan menciptakan lingkungan kerja yang produktif dan berdaya saing.', '14px', 'normal')"
           onmouseout="resetText('textHr', 'Human Resource', '1.5rem', '600')"
         >
           <p
@@ -202,6 +202,77 @@
           >
             Human Resource
           </p>
+        </div>
+      </div>
+    </section>
+    <section
+      class="bg-center bg-no-repeat bg-cover full mt-[164px] h-[400px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
+      style="background-image: url('./public/bg-section.png')"
+    >
+      <div class="container mx-auto">
+        <div class="flex flex-col mx-auto text-center pt-[77px]">
+          <p class="text-xl font-semibold text-emerald-400 lg:text-2xl">
+            Class
+          </p>
+          <h1 class="mx-5 mt-2 text-2xl font-semibold text-black lg:text-4xl">
+            MCC Memiliki 3 Kelas Pelatihan
+          </h1>
+        </div>
+
+        <div class="grid grid-cols-1 gap-5 px-7 mt-10 md:grid-cols-3 lg:px-24">
+          <div
+            class="p-5 space-y-5 rounded-xl"
+            style="
+              background: linear-gradient(
+                295deg,
+                rgba(103, 136, 255, 0.25) 0%,
+                rgba(103, 136, 255, 0) 100%
+              );
+            "
+          >
+            <img src="./public/card1.png" alt="card1" />
+            <h1 class="text-2xl font-semibold text-black">
+              Mobile Programming
+            </h1>
+            <p class="text-base font-medium text-black">
+              Divisi yang mempelajari pengembangan aplikasi mobile menggunakan
+              Flutter
+            </p>
+          </div>
+          <div
+            class="p-5 space-y-5 rounded-xl"
+            style="
+              background: linear-gradient(
+                295deg,
+                rgba(103, 136, 255, 0.25) 0%,
+                rgba(103, 136, 255, 0) 100%
+              );
+            "
+          >
+            <img src="./public/card2.png" alt="card2" />
+            <h1 class="text-2xl font-semibold text-black">Web Programming</h1>
+            <p class="text-base font-medium text-black">
+              Divisi yang mempelajari pengembangan website frontend maupun
+              backend
+            </p>
+          </div>
+          <div
+            class="p-5 space-y-5 rounded-xl"
+            style="
+              background: linear-gradient(
+                295deg,
+                rgba(103, 136, 255, 0.25) 0%,
+                rgba(103, 136, 255, 0) 100%
+              );
+            "
+          >
+            <img src="./public/card3.png" alt="card3" />
+            <h1 class="text-2xl font-semibold text-black">Ui / Ux Design</h1>
+            <p class="text-base font-medium text-black">
+              Divisi yang mempelajari Cara membuat sebuah tampilan yang baik dan
+              menarik
+            </p>
+          </div>
         </div>
       </div>
     </section>
