feat: add feature

--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
         </div>
       </div>
     </section>
+
     <section
-      class="bg-center bg-no-repeat bg-cover full mt-[164px] h-[400px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
+      class="bg-center bg-no-repeat bg-cover md:mb-0 mb-[850px] full mt-[164px] h-[400px] sm:mb-[650px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
       style="background-image: url('./public/bg-section.png')"
     >
       <div class="container mx-auto">
@@ -274,6 +275,21 @@
             </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="container px-7 mx-auto mt-5">
+      <div class="flex flex-col mx-auto">
+        <p class="text-xl font-semibold text-emerald-400 lg:text-2xl">
+          Showcase
+        </p>
+        <h1 class="mt-2 text-2xl font-semibold text-black lg:text-4xl">
+          Project dan Karya MCC
+        </h1>
+      </div>
+
+      <div class="py-48 text-center sm:py-56 xl:py-64">
+        <p class="text-5xl font-semibold text-black text-opacity-5">SOON</p>
       </div>
     </section>
     <script src="./src/script/main.js"></script>
