feat: add footer

--- a/index.html
+++ b/index.html
@@ -292,6 +292,42 @@
         <p class="text-5xl font-semibold text-black text-opacity-5">SOON</p>
       </div>
     </section>
+
+    <footer class="bg-[#243665]">
+      <div class="container p-5 mx-auto lg:px-12 lg:pt-24">
+        <div class="grid gap-12 mx-auto md:grid-cols-3">
+          <div class="flex flex-col gap-5">
+            <h1 class="text-xl font-semibold text-white">Sekretariat AMCC</h1>
+            <p class="text-base font-semibold text-white">
+              Gedung BSC Lt. 3 Universitas Amikom Yogyakarta Jalan Ringroad
+              Utara, Condongcatur, Depok Sleman, Yogyakarta
+            </p>
+          </div>
+          <div class="flex flex-col gap-5">
+            <h1 class="text-xl font-semibold text-white">Basecamp MCC</h1>
+            <p class="text-base font-semibold text-white">
+              MCC Camp Gg. Kapuas No.47, Jetis, Wedomartani, Ngemplak, Sleman,
+              DIY 55584
+            </p>
+          </div>
+          <div class="flex flex-col gap-5">
+            <h1 class="text-xl font-semibold text-white">Sekretariat AMCC</h1>
+            <p class="text-base font-semibold text-white">
+              Gedung BSC Lt. 3 Universitas Amikom Yogyakarta Jalan Ringroad
+              Utara, Condongcatur, Depok Sleman, Yogyakarta
+            </p>
+          </div>
+        </div>
+        <div class="mt-20 md:flex md:flex-row-reverse md:justify-between">
+          <a href="https://www.instagram.com/mcc.umk/">
+            <img class="w-5 h-5" src="./public/sosial.svg" alt="instagram" />
+          </a>
+          <p class="mt-5 text-sm font-semibold text-white md:mt-0">
+            &copy; 2023 MCC - Departemen IT
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="./src/script/main.js"></script>
   </body>
 </html>
