feat: add navbar responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
       </div>
-      <div class="hidden bg-indigo-50 rounded-lg" id="navbar">
+      <div class="hidden bg-indigo-50 rounded-b-lg" id="navbar">
         <ul class="flex flex-col gap-y-10 justify-center items-center py-3">
           <li><a href="#" class="text-2xl font-medium text-black">Home</a></li>
           <li><a href="#" class="text-2xl font-medium text-black">Event</a></li>
@@ -48,15 +48,22 @@
         >
           <li>
             <a href="#" class="text-2xl font-medium text-center text-white"
-              >Join us</a
+              >JoinUs</a
             >
           </li>
         </ul>
       </div>
     </nav>
 
-    <nav class="hidden sm:inline-block">
-      <h1>hello</h1>
+    <nav class="hidden gap-10 justify-end items-center py-5 px-12 sm:flex">
+      <a href="#" class="text-2xl font-medium text-black">Home</a>
+      <a href="#" class="text-2xl font-medium text-black">Event</a>
+      <a href="#devisi" class="text-2xl font-medium text-black">Structure</a>
+      <a
+        href="#"
+        class="text-center rounded-xl px-4 text-white text-2xl font-medium py-2 bg-[#243665]"
+        >JoinUs</a
+      >
     </nav>
     <header
       class="flex relative justify-center bg-center bg-no-repeat bg-cover h-[300px] sm:h-[400px] lg:h-[500px] xl:h-[650px] 2xl:h-[910px]"
