fix(devisi): event click & text

--- a/index.html
+++ b/index.html
@@ -187,10 +187,9 @@
             Human Resource
           </p>
           <p class="hidden p-2" id="hr">
-            Divisi yang bertanggung jawab mengelola sumber daya manusia,
-            termasuk perekrutan, pengembangan karyawan, administrasi
-            kepegawaian, kebijakan karyawan, dan menciptakan lingkungan kerja
-            yang produktif dan berdaya saing.
+            Divisi yang bertanggung jawab mengelola SDM dalam perekrutan,
+            pengembangan, administrasi, kebijakan, dan menciptakan lingkungan
+            kerja yang produktif dan berdaya saing.
           </p>
         </div>
       </div>
@@ -236,7 +235,7 @@
         </div>
         <div
           class="flex justify-center items-center bg-violet-100 rounded-[11px]"
-          onmouseover="changeText('textHr', 'Divisi bertanggung jawab mengelola sumber daya manusia, termasuk perekrutan, pengembangan karyawan, administrasi kepegawaian, kebijakan karyawan, dan menciptakan lingkungan kerja yang produktif dan berdaya saing.', '14px', 'normal')"
+          onmouseover="changeText('textHr', 'Divisi yang bertanggung jawab mengelola SDM dalam perekrutan, pengembangan, administrasi, kebijakan, dan menciptakan lingkungan kerja yang produktif dan berdaya saing.', '14px', 'normal')"
           onmouseout="resetText('textHr', 'Human Resource', '1.5rem', '600')"
         >
           <p
