refactor: change bg.png to bg.svg

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="container fixed z-10 sm:hidden">
       <div class="flex flex-row justify-end p-3 bg-white md:hidden tems-center">
         <div>
-          <div class="hover:opacity-100 tham-e-squeeze tham tham-w-6">
+          <div class="hover:opacity-100 tham-e-squeeze tham tham-w-8">
             <div class="tham-box">
               <div class="tham-inner"></div>
             </div>
@@ -67,7 +67,7 @@
     </nav>
     <header
       class="flex relative justify-center bg-center bg-no-repeat bg-cover h-[300px] sm:h-[400px] lg:h-[500px] xl:h-[650px] 2xl:h-[910px]"
-      style="background-image: url('./public/bg-header.png')"
+      style="background-image: url('./public/bg-header.svg')"
     >
       <div class="container absolute top-6 flex-col mt-[39px]">
         <div class="flex justify-center">
@@ -103,7 +103,7 @@
 
     <section
       class="bg-center bg-no-repeat bg-cover full mt-[164px] h-[400px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
-      style="background-image: url('./public/bg-section.png')"
+      style="background-image: url('./public/bg-section.svg')"
     >
       <div class="container flex flex-col mx-auto text-center pt-[77px]">
         <p class="text-xl font-semibold text-emerald-400 lg:text-2xl">
@@ -250,7 +250,7 @@
 
     <section
       class="bg-center bg-no-repeat bg-cover md:mb-0 mb-[850px] full mt-[164px] h-[400px] sm:mb-[650px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
-      style="background-image: url('./public/bg-section.png')"
+      style="background-image: url('./public/bg-section.svg')"
     >
       <div class="container mx-auto">
         <div class="flex flex-col mx-auto text-center pt-[77px]">
