style: change text-2xl to text-xl

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       </div>
       <div class="hidden bg-indigo-50 rounded-b-lg" id="navbar">
         <ul class="flex flex-col gap-y-10 justify-center items-center py-3">
-          <li><a href="#" class="text-2xl font-medium text-black">Home</a></li>
-          <li><a href="#" class="text-2xl font-medium text-black">Event</a></li>
+          <li><a href="#" class="text-xl font-medium text-black">Home</a></li>
+          <li><a href="#" class="text-xl font-medium text-black">Event</a></li>
           <li>
-            <a href="#devisi" class="text-2xl font-medium text-black"
+            <a href="#devisi" class="text-xl font-medium text-black"
               >Structure</a
             >
           </li>
@@ -47,7 +47,7 @@
           class="mt-8 py-3 flex justify-center items-center rounded-b-lg bg-[#243665]"
         >
           <li>
-            <a href="#" class="text-2xl font-medium text-center text-white"
+            <a href="#" class="text-xl font-medium text-center text-white"
               >JoinUs</a
             >
           </li>
@@ -56,12 +56,12 @@
     </nav>
 
     <nav class="hidden gap-10 justify-end items-center py-5 px-12 sm:flex">
-      <a href="#" class="text-2xl font-medium text-black">Home</a>
-      <a href="#" class="text-2xl font-medium text-black">Event</a>
-      <a href="#devisi" class="text-2xl font-medium text-black">Structure</a>
+      <a href="#" class="text-xl font-medium text-black">Home</a>
+      <a href="#" class="text-xl font-medium text-black">Event</a>
+      <a href="#devisi" class="text-xl font-medium text-black">Structure</a>
       <a
         href="#"
-        class="text-center rounded-xl px-4 text-white text-2xl font-medium py-2 bg-[#243665]"
+        class="text-center rounded-xl px-4 text-white text-xl font-medium py-2 bg-[#243665]"
         >JoinUs</a
       >
     </nav>
