style(header): reset margin

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       class="flex relative justify-center bg-center bg-no-repeat bg-cover h-[300px] sm:h-[400px] lg:h-[500px] xl:h-[650px] 2xl:h-[910px]"
       style="background-image: url('./public/bg-header.svg')"
     >
-      <div class="container absolute top-6 flex-col mt-[39px]">
+      <div class="container absolute top-6 flex-col mt-6 md:mt-0">
         <div class="flex justify-center">
-          <img src="./public/Logo.svg" alt="logo" class="mt-8" />
+          <img src="./public/Logo.svg" alt="logo" class="mt-8 md:mt-0" />
         </div>
 
         <div class="mt-5 text-center">
@@ -102,7 +102,7 @@
     </header>
 
     <section
-      class="bg-center bg-no-repeat bg-cover full mt-[164px] h-[400px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
+      class="bg-center bg-no-repeat bg-cover md:mt-72 full mt-[164px] h-[400px] sm:h-[500px] md:h-[600px] lg:h-[750px] xl:h-[800px] 2xl:h-[1000px]"
       style="background-image: url('./public/bg-section.svg')"
     >
       <div class="container flex flex-col mx-auto text-center pt-[77px]">
