style(header): reset margin

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       class="flex relative justify-center bg-center bg-no-repeat bg-cover h-[300px] sm:h-[400px] lg:h-[500px] xl:h-[650px] 2xl:h-[910px]"
       style="background-image: url('./public/bg-header.svg')"
     >
-      <div class="container absolute top-6 flex-col mt-6 md:mt-0">
+      <div class="container absolute top-6 flex-col mt-6 sm:mt-0">
         <div class="flex justify-center">
-          <img src="./public/Logo.svg" alt="logo" class="mt-8 md:mt-0" />
+          <img src="./public/Logo.svg" alt="logo" class="mt-8 sd:mt-0" />
         </div>
 
         <div class="mt-5 text-center">
