--- a/index.html
+++ b/index.html
@@ -339,24 +339,10 @@
       <div class="container p-5 mx-auto lg:px-12 lg:pt-24">
         <div class="grid gap-12 mx-auto md:grid-cols-3">
           <div class="flex flex-col gap-5">
-            <h1 class="text-xl font-semibold text-white">Sekretariat AMCC</h1>
-            <p class="text-base font-semibold text-white md:text-xl">
-              Gedung BSC Lt. 3 Universitas Amikom Yogyakarta Jalan Ringroad
-              Utara, Condongcatur, Depok Sleman, Yogyakarta
-            </p>
-          </div>
-          <div class="flex flex-col gap-5">
             <h1 class="text-xl font-semibold text-white">Basecamp MCC</h1>
             <p class="text-base font-semibold text-white md:text-xl">
-              MCC Camp Gg. Kapuas No.47, Jetis, Wedomartani, Ngemplak, Sleman,
-              DIY 55584
-            </p>
-          </div>
-          <div class="flex flex-col gap-5">
-            <h1 class="text-xl font-semibold text-white">Sekretariat AMCC</h1>
-            <p class="text-base font-semibold text-white md:text-xl">
-              Gedung BSC Lt. 3 Universitas Amikom Yogyakarta Jalan Ringroad
-              Utara, Condongcatur, Depok Sleman, Yogyakarta
+              MCC Camp Gg. I, Lt. 1 Depan Tangga Sebelah Barat Universitas Muria
+              Kudus
             </p>
           </div>
         </div>
@@ -364,12 +350,12 @@
           <a href="https://www.instagram.com/mcc.umk/">
             <img
               class="w-5 h-5 md:w-7 md:h-7"
-              src="./public/sosial.svg"
+              src="./public/sosial.png"
               alt="instagram"
             />
           </a>
           <p class="mt-5 text-xs font-semibold text-white md:mt-0 md:text-xl">
-            &copy; 2023 MCC - Departemen IT
+            &copy; 2023 MCC
           </p>
         </div>
       </div>
